extensions/pop-games-extension/assets/pop-up.css
#overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0, 0, 0, 0.3);
  z-index: 99; /* Below the pop-up */
  display: block;
}

#popUp {
    display: none;
    position: fixed;
    bottom: 50%;
    right: 50%;
    transform: translate(50%, 50%);
    width: auto;
    height: auto;
    border: 4px solid hsl(0, 100%, 50%);
    animation: rainbow 10s infinite alternate;
    -webkit-animation: rainbow 10s infinite alternate;
    z-index: 100;
    background: #fff;
}

  #left-column {
    width: 400px;
    background-color: #000;
    display: flex;
    text-align: center;
    flex-direction: column;
    justify-content: center;
    /*margin: 30px 10px 30px 30px;*/
  }

  #right-column {
    width: 400px;
    background-color: #fff;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0px 0px 30px 0px;
  }

  #exitContainer {
    /*position: absolute;*/
    height: 30px;
    width: 30px;
    /*top: 10px;
    right: 10px;*/
    z-index: 102;
    margin-left: 93%;
  }

  #exitContainerMobile {
    position: absolute;
    height: 30px;
    width: 30px;
    top: 10px;
    right: 2px;
    margin-bottom: 120%;
    /*margin-left: 92%;*/
    z-index: 102;
  }

  #exitButton {
    display: inline-block;
    width: 75%;
    height: 75%;
    cursor: pointer;
  }

  #exitButtonMobile {
    display: inline-block;
    width: 75%;
    height: 75%;
    cursor: pointer;
  }

  #exitButtonHover {
    display: none;
    width: 75%;
    height: 75%;
    cursor: pointer;
  }

  #exitButtonHoverMobile {
    display: none;
    width: 75%;
    height: 75%;
    cursor: pointer;
  }

  #headerContainer {
    width: 80%;
    text-align: center;
    margin-left: 10%;
  }

  #headerText {
    font-size: 25px;
    font-weight: bold;
    color: #fff;
  }

  #subheaderText {
    font-size: 16px;
    font-weight: bold;
    color: #d2d2d2;
    margin: 10px;
  }

  #subheaderContainer {
    width: 100%;
    text-align: center;
  }

  #optOutText {
    font-size: 12px;
    color: #d2d2d2;
  }

  #optOutContainer {
    width: 100%;
    margin-top: 2%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  /*#optOut {
    margin-top: 20px;
    top: 5px;
  }*/

  #discountText {
    font-size: 16px;
    font-weight: bold;
    color: #d2d2d2;
  }

  #discountContainer {
    width: 100%;
    text-align: center;
    margin-top: 10%;
    color: #d2d2d2;
  }

  #discount-box {
    width: 200px;
    height: 60px;
    border: 1px solid #d2d2d2;
    background: linear-gradient(135deg, #f0f0f0 0%, #d2d2d2 30%, #e0e0e0 60%, #d1d1d1 100%);
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    border-radius: 10px;
    text-align: center;
    line-height: 60px;
    margin-left: 25%;
    margin-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #discountCode {
    color: #fff;
    font-weight: bold;
    font-size: 16px;
  }

  #copyButton {
    display: none;
    width: 10%;
    height: 75%;
    border: none;
    cursor: pointer;
    margin-bottom: 1%;
  }

  #circleTickSmall {
    display: none;
    width: 10%;
    height: 75%;
    margin-bottom: 0.5%;
  }

  #discount-terms {
    width: 200px;
    height: 20px;
    text-align: center;
    color: #d2d2d2;
    font-size: 10px;
    margin-left: 25%;
    margin-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #email-terms {
    width: 350px;
    height: 20px;
    text-align: center;
    color: #d2d2d2;
    font-size: 10px;
    margin-left: 6.25%;
    margin-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #gameContainer {
    width: 100%;
    height: 100%;
    background-color: #fff; 
    border: none;
    font: inherit;
    z-index: 100;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    position: relative;
  }

  button[is="party-button"] {
    width: 100%;
    height: 75%;
    background: url("{{ 'thumbs-up.png' | asset_img_url: '180x180' }}") no-repeat center;
    padding: 0;
    border: none;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    z-index: 100;
    transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
  }

  button[is="party-button"]:hover {
    transform: scale(1.10);
  }

  button[is="party-button"]:active {
    transform: scale(0.95);
  }

  #imageContainer {
    display: none;
    align-items: center;
    justify-content: center;
    height: 17.25%;
    z-index: 100;
    margin-top: 11.85%;
    margin-bottom: 5.85%;
  }

  #circleTick {
    width: 20%;
    height: 100%;
  }

  #discountPercentageContainer {
    display: none;
    align-items: center;
    justify-content: center;
    height: 17.25%;
    z-index: 100;
    margin-top: 14.5%;
    margin-bottom: 3.15%;
  }

  #discountPercentage {
    width: 80%;
    height: 100%;
    font-size: 40px;
    font-weight: bold;
    color: #fff;
  }

  #lockContainer {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    z-index: 102;
    bottom: 1%;
  }

  #lock {
    width: 20%;
    height: 100%;
  }

  #wordGameImg {
    position: fixed;
    height: 95%;
    z-index: 101;
    filter: blur(3px);
    bottom: 5%;
  }

  #birdGameImg {
    position: fixed;
    display: none;
    height: 100%;
    width: 50%;
    z-index: 101;
    /*filter: blur(3px);*/
  }

  #wordGameContainer {
    display: none;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    height: 100%;
  }

  #actionButtonContainer {
    z-index: 100;
    margin-top: 11.85%;
    margin-bottom: 4%;
  }

  #actionButton {
    display: none;
    background-color: #007BFF;
    color: #fff;
    padding: 1% 2%;
    border: none;
    cursor: pointer;
    width: 144px;
    height: 48px;
    font-size: 18px;
    border-radius: 8px;
  }

  #imageButton {
    background-image: url('https://i.imgur.com/hUZIRqH.png');
    color: #fff;
    padding: 1% 2%;
    border: none;
    cursor: pointer;
    width: 144px;
    height: 48px;
    font-size: 18px;
    border-radius: 8px;
  }

  #emailForm {
    padding: 1.25%;
    border: none;
    z-index: 100;
    text-align: center;
    margin-top: 8.85%;
    margin-bottom: 5.85%;
  }

  #emailForm label {
    display: block;
    font-weight: bold;
    margin-bottom: 1%;
    margin-top: 5%;
    color: #d2d2d2;
  }

  #emailForm input {
    display: inline-block;
    padding: 1%;
    border: 1px solid #ccc;
    margin-bottom: 2%;
    font-size: 16px;
  }

  #emailForm button[type="button"] {
    display: inline-block;
    background-color: #007BFF;
    color: #fff;
    padding: 1% 2%;
    border: none;
    cursor: pointer;
  }

  #emailDenied {
    display: none;
    font-size: 10px;
    color: #FF0000;
  }

#title {
    font-size: 30px;
    font-weight: bold;
    letter-spacing: 2px;
    margin-bottom: 0px;
    padding-top: 0px;
}

#answer {
    width: 100%;
    font-size: 16px;
    font-weight: bold;
    margin-top: 10px;
}

#board {
    width: 200px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    cursor: pointer;
}

.tile {
    /* Box */
    border: 2px solid lightgray;
    margin: 2.5px auto;
    width: 36px;
    height: 40px;

    /* Text */
    color: black;
    font-size: 20px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}

#keyboard {
    width: 100%;
    margin: 0 auto;
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
    cursor: pointer;
    justify-content: center;
}

.keyboard-row {
    width: 100%;
    height: 42px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    z-index: 100;
    justify-content: center;
}

.key-tile {
    width: 26px;
    height: 40px;
    margin: 1px;
    border: 1px solid lightgray;
    z-index: 100;

    /* Text */
    font-size: 16px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}

.enter-key-tile {
    width: 55px;
    height: 40px;
    margin: 1px;
    border: 1px solid lightgray;
    z-index: 100;

    /* Text */
    font-size: 16px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}

.correct {
    background-color: #6AAA64;
    color: white;
    border-color: white;
}

.present {
    background-color: #C9B458;
    color: white;
    border-color: white;
}

.absent {
    background-color: #787C7E;
    color: white;
    border-color:white;
}

#bird-board {
  background-image: url("./birdgamebg.png");
  background-size: 400px 500px;
  height: 500px;
  width: 400px;
}

#birdGameContainer {
  display: flex;
  height: 100%;
  width: 400px;
}

#birdImg {
  display: none;
  width: 34px;
  height: 24px;
}

#topPipeImg {
  display: none;
  width: 64px;
  height: 360px;
}

#bottomPipeImg {
  display: none;
  width: 64px;
  height: 360px;
}

#statsContainer {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 300px;
  height: 300px;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 8px;
  border: 1px solid lightgray;
  z-index: 102;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.title {
  font-size: 18px;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 5px;
  margin-top: 30px;
  font-weight: bold;
}

#statsSubtitle {
  font-size: 12px;
  line-height: 1.5;
  text-align: center;
  margin: 0;
}

.footer {
  font-size: 12px;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 10px;
  margin-top: 35px;
  width: 100%;
  font-weight: bold;
}

.stats-column-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-top: 10px;
  margin-bottom: 35px;
  margin-right: 15px;
  margin-left: 15px;
  font-weight: bold;
}

.column {
  flex: 1;
  text-align: center;
  font-size: 14px;
  margin-top: 0px;
  margin-bottom: 0px;
  height: 30%;
}

.column p {
 margin: 5px;
}

